client/styles/global.import.less
body {
  background: @white;
  .font2;
  font-style: normal;
}

h1,h2,h3,h4,h5,h6 {
  font-weight: normal;
  text-shadow: 0 0 0;
  .font1;
}

h1 {
  letter-spacing: 0px;
  line-height: 0.91em;
  text-shadow: 1px 1px 0 fade(@brand, 25%);
}

a:active, a:focus {
  color: black;
}

p {
  .font2;
  font-style: normal;
}

p a {text-decoration: underline;}
p a:hover {color: @brand;}

img {
  width: 100%;
  height: auto;
}

hr {border-color: @brand; border-style: dotted}

::selection {
  background: @brand;
}

.loader-container {
  text-align: center;
  display: table;
  width: 100%;
  position: absolute;
  left: 0;
  z-index: 9999
}

.loader {
  display: table-cell;
  vertical-align: middle;
  height: 100vh;
  // background: lighten(@brand, 35%);
  background: white;
  padding: 20px;
  /*box-shadow: inset 0 0 125px rgba(0,0,0,0.33);*/
  // box-shadow: inset 0 0 125px fade(@brand, 33%);
  color: @brand;
}

.loader i.fa-spin {
  /*Venus / Female*/
  /*-webkit-transform-origin: 45% 28%;transform-origin: 45% 28%;*/
  // -webkit-transform-origin: 46% 43%;transform-origin: 46% 43%;
}

#globalContainer {
}

#contentContainer {

}

#headerWrap {}

#headerWrap .mainAction {margin-right: 10px}

.menuWrap {
  height: 0;
}

#menuWrapInner {
  padding-top: 42px;
}

#menuHeader {
  background: @brand;
  height: 42px;
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
}

#menuFollow {
  margin-top: 100px;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: #373a47;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  // color: @white;
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: @black;
}

/* General sidebar styles */
.bm-menu {
  .font1;
  font-style: italic;
  background: @black;
  padding: 2.5em 1.5em 0;
  font-size: 1em;
  line-height: 2em;
}

.bm-menu a {color: fade(@white, 66%);}
.bm-menu a:hover,
.bm-menu a:active {
  color: @white;
}

.bm-menu #menuMain {
  font-style: normal;
  .font1;
}

.bm-menu #menuSub {
  .font2;
  font-style: normal;
  font-size: 1em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: @black;
}

/* Wrapper for item list */
.bm-item-list {
  color: #b8b7ad;
  padding: 0.8em;
}

/* Styling of overlay */
.bm-overlay {
  background: fade(@brand, 33%);
}

// Header & Navbar

nav.nav {
  height: 42px;
  padding: 5px;
}

nav.nav a.logo {
  display: block;
  background: @black;
  text-align: center;
  transform: rotate(-1deg);
  // height: 30px;
  // width: 106px;
  position: absolute;
  left: 50%;
  color: white;
  padding: 8px 6px 8px 12px;
  margin-left: -53px;
  margin-top: 10px;
  z-index: 2;
  .transition;
  & span {
    .font2;
    font-size: 22px;
    letter-spacing: 3px;
    font-weight: bold;
  }
  &:hover, :active, :focus {
    text-decoration: none;
    background: @brand;
  }
}

.navbar-default {background: white}

/* Position and sizing of burger button */
.bm-burger-button {
  position: relative;
  width: 24px;
  height: 20px;
  left: 15px;
  top: 10px;
}

.browseIcon img.snapchat {
  width: 16px;
  height: 16px;
  margin: -2px 0 0 0;
}

.menuOptions {

}

.contentBlock {
  margin: 40px auto;
  padding: 20px 0 40px 0;
  background: white;
}

#footerContainer {
  width: 100%;
  background: darken(@brand, 33%);
  color: white;
  & a {
    color: white;
  }
}

//
// #globalContainer {}
//
// #header {
//   position: relative;
//   z-index: 9999;
//   display: table;
//   text-align: center;
//   width:100%;
// }
//
// #title {
//   display: table;
//   margin: 40px auto 0px auto;
//   font-size: 88px;
//   -webkit-transform: rotate(-12deg);
// }
//
// #subtitle {
//   display: table;
//   margin:0px auto 20px auto;
//   font-size: 44px;
//   -webkit-transform: rotate(-12deg);
// }

